--- a/apps/forgot_password/scss/style.scss
+++ b/apps/forgot_password/scss/style.scss
@@ -6,7 +6,7 @@
     position: relative;
 
     .formbox {
-      background: #fff;
+      background: rgba(255, 255, 255, 0.4);
       padding: 20px;
       box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .1);
       max-width: 400px;
