--- a/apps/login/scss/style.scss
+++ b/apps/login/scss/style.scss
@@ -7,11 +7,10 @@
     position: relative;
 
     .auth-box {
-      background: #fff;
-      //background: rgba(255,255,255, 0.3);
+      background: rgba(255, 255, 255, 0.4);
       padding: 20px;
-      box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .1);
       max-width: 400px;
+      box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .1);
       width: 90%;
       margin: 10% 0;
 
