--- a/template/app/content.twig
+++ b/template/app/content.twig
@@ -2,12 +2,13 @@
     {% if hasAppNavigation == true %}
         {{ appNavigation|raw }}
     {% endif %}
-    <div class="bg-white" id="app-content">
+    <div class="d-flex flex-column bg-white" id="app-content">
         <div>
             <nav aria-label="breadcrumb" style="background-color: white; border-bottom: 1px solid #dee2e6 !important;">
                 <ol class="breadcrumb" style="background-color: white; margin: 0 !important;">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Check24</li>
+                    <li class="breadcrumb-item">Check24</li>
+                    <li class="breadcrumb-item active" aria-current="page">HHV</li>
                 </ol>
             </nav>
         </div>
