--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -192,7 +192,7 @@ hr {
 }
 
 a, a:link {
-  color: $keestash-theme-color !important;
+  color: $keestash-text-color !important;
 }
 
 a:visited, a:hover, a:active {
