--- a/template/app/content.twig
+++ b/template/app/content.twig
@@ -3,7 +3,7 @@
         {{ appNavigation|raw }}
     {% endif %}
     <div class="d-flex flex-column bg-white" id="app-content">
-        <div>
+        <div class="d-none" id="breadcrumb-wrapper">
             <nav aria-label="breadcrumb" style="background-color: white; border-bottom: 1px solid #dee2e6 !important;">
                 <ol class="breadcrumb" id="breadcrumb" style="background-color: white; margin: 0 !important;">
                     <li class="breadcrumb-item invisible">breadcrumb</li>
