--- a/template/app/app-navigation.twig
+++ b/template/app/app-navigation.twig
@@ -1,5 +1,5 @@
-<div id="app-navigation">
-    <div class="scrollable">
+<div class="d-flex" id="app-navigation">
+    <div class="scrollable flex-grow-1">
         {% if hasActionBars == true %}
             <div class="container-fluid action-bar">
                 {{ actionBar|raw }}
