--- a/template/app/html.twig
+++ b/template/app/html.twig
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="{{ language }}">
+<html class="d-flex flex-grow-1" lang="{{ language }}">
 {{ head|raw }}
 {{ body|raw }}
 </html>
-
 
 <data-node
         id="data-node"
