--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -18,7 +18,7 @@ $keestash-avatar-size-m: 50px;
 $grey: #9e9e9e;
 $grey-dark: #484848;
 
-@import "../../vendor/twitter/bootstrap/scss/bootstrap.scss";
+@import "bootstrap.scss";
 
 html {
   color: $keestash-text-color-white;
