--- a/apps/login/template/login.twig
+++ b/apps/login/template/login.twig
@@ -1,4 +1,4 @@
-<div class="main-wrapper login">
+<div class="main-wrapper login flex-grow-1">
     <div class="auth-wrapper d-flex no-block justify-content-center align-items-center"
          style="
                  background:url({{ backgroundPath }}) no-repeat center center fixed;
