introduce demo mode

--- a/apps/login/scss/login.scss
+++ b/apps/login/scss/login.scss
@@ -14,6 +14,12 @@
       width: 90%;
       margin: 10% 0;
 
+      #demoMode {
+        #sensitiveData {
+          color: red;
+        }
+      }
+
       .logo {
         text-align: center;
 
