--- a/template/app/footer.twig
+++ b/template/app/footer.twig
@@ -1,11 +1,11 @@
-<!--<footer>-->
-<!--    <div class="ui vertical center aligned footer segment">-->
-<!--        <div class="">-->
-<!--            <p>&copy; {{ start_year }} - {{ current_year }} {{ appName }}</p>-->
-<!--        </div>-->
-<!--        <div class="">-->
-<!--            Built by-->
-<!--            <a href="{{ vendor_url }}"> {{ vendor_name }}</a>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</footer>-->
+{#<footer>#}
+{#    <div class="ui vertical center aligned footer segment">#}
+{#        <div class="">#}
+{#            <p>&copy; {{ start_year }} - {{ current_year }} {{ appName }}</p>#}
+{#        </div>#}
+{#        <div class="">#}
+{#            Built by#}
+{#            <a href="{{ vendor_url }}"> {{ vendor_name }}</a>#}
+{#        </div>#}
+{#    </div>#}
+{#</footer>#}
