--- a/apps/login/template/login.twig
+++ b/apps/login/template/login.twig
@@ -8,11 +8,21 @@
                  background-size: cover;
                  ">
         <div class="auth-box">
-            <div id="loginform-wrapper" class="ks-form">
+            <div id="loginform-wrapper" class="ks-form" data-demo="{{ demo }}">
                 <div class="logo">
                     <span class="db"><img id="logo-image" height="30px" src="{{ logoPath }}" alt="logo"/></span>
                     <h5 class="font-medium mb-3">{{ loginToApp }}</h5>
                 </div>
+
+                {% if demoMode.isDemoMode %}
+                    <div class="d-flex flex-column" id="demoMode">
+                        <span id="sensitiveData">{{ demoMode.sensitiveData }}</span>
+                        <span class="mt-3">{{ demoMode.deleteInfo }}</span>
+                        <span class="mt-3">{{ demoMode.adminUser }}</span>
+                        <span>{{ demoMode.adminPassword }}</span>
+                    </div>
+                {% endif %}
+
                 <!-- Form -->
                 <div class="row">
                     <div class="col-12">
@@ -51,23 +61,71 @@
                                 <div class="form-group mb-0 mt-2">
                                     <div class="col-sm-12 text-center">
                                         {{ createNewAccountText }} <a href="{{ newAccountLink }}"
-                                                                      {% if newTab %}
-                                                                      target="_blank"
-                                                                      {% endif %}
+                                                {% if newTab %}
+                                                    target="_blank"
+                                                {% endif %}
                                                                       class="ml-1"><b>{{ createNewAccountActionText }}</b></a>
                                     </div>
                                 </div>
                             {% endif %}
-                            <div class="form-group mb-0 mt-2">
-                                <div class="col-sm-12 text-center">
-                                    {{ forgotPasswordText }} <a href="{{ forgotPasswordLink }}"
-                                            {% if newTab %}
-                                                target="_blank"
-                                            {% endif %}
-                                                                class="ml-1"><b>{{ forgotPasswordActionText }}</b></a>
+                            {% if forgotPasswordEnabled == true %}
+                                <div class="form-group mb-0 mt-2">
+                                    <div class="col-sm-12 text-center">
+                                        {{ forgotPasswordText }} <a href="{{ forgotPasswordLink }}"
+                                                {% if newTab %}
+                                                    target="_blank"
+                                                {% endif %}
+                                                                    class="ml-1"><b>{{ forgotPasswordActionText }}</b></a>
+                                    </div>
                                 </div>
-                            </div>
+                            {% endif %}
                         </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal" id="emailAddressModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+     aria-hidden="true" data-keyboard="false" data-focus="true" data-backdrop="static">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-body d-flex flex-column">
+
+                <div class="alert alert-danger d-none" role="alert" id="danger--alert">
+                    Please provide a valid email address
+                </div>
+
+                <div>
+                    <h4>Welcome to the the demonstration instance of Keestash!</h4>
+                </div>
+                <div>
+                    We would like to keep you up to date with news about Keestash. Please input your email address in
+                    order
+                    to use the demo version.
+                </div>
+                <div>
+                    <input type="text" class="form-control" aria-label="Default"
+                           aria-describedby="inputGroup-sizing-default"
+                           placeholder="please provide your email address"
+                           id="demouser_email_address"
+                    >
+                </div>
+                <small>
+                    With submitting your email address, you are agreeing with our <a href="{{ tncLink }}"
+                                                                                     target="_blank">Terms and
+                        Conditions</a>
+                </small>
+                <div class="d-flex flex-column">
+                    <button type="button" style="background: #269dff; border-color: #269dff" class="btn btn-success"
+                            id="send-demo-email">
+                        Send
+                    </button>
+                    <div class="spinner-border d-none flex-grow-1 align-self-center" role="status"
+                         id="loading--spinner">
+                        <span class="sr-only">Loading...</span>
                     </div>
                 </div>
             </div>
