--- a/template/app/actionbar.twig
+++ b/template/app/actionbar.twig
@@ -1,8 +1,8 @@
 <div class="container action-bar-inner">
 
-    <div class="p-3">
+    <div class="pt-3 pb-3">
 
-        <div class="btn-group">
+        <div class="btn-group d-flex">
             <button
                     type="button"
                     class="btn dropdown-toggle btn-primary"
