--- a/template/app/html.twig
+++ b/template/app/html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="d-flex flex-grow-1" lang="{{ language }}">
+<html class="" lang="{{ language }}">
 {{ head|raw }}
 {{ body|raw }}
 </html>
