--- a/template/app/navbar.twig
+++ b/template/app/navbar.twig
@@ -1,5 +1,5 @@
-<nav class="navbar sticky-top flex-md-nowrap p-0">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="{{ mainHref }}">
+<nav class="navbar sticky-top col">
+    <a class="navbar-brand" href="{{ mainHref }}">
         <img src="{{ logopath }}" height="30" alt="{{ vendorName }}">
     </a>
 
