--- a/template/app/content.twig
+++ b/template/app/content.twig
@@ -1,17 +1,12 @@
-<div class="d-flex flex-row" id="content">
-    {% if hasAppNavigation == true %}
+{% if hasAppNavigation == true %}
+    <div class="col-sm-2 d-flex app-navigation-background">
         {{ appNavigation|raw }}
-    {% endif %}
-    <div class="d-flex flex-column bg-white" id="app-content">
-        <div class="d-none" id="breadcrumb-wrapper">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb" id="breadcrumb">
-                    <li class="breadcrumb-item invisible">breadcrumb</li>
-                </ol>
-            </nav>
-        </div>
-        <div class="d-flex flex-grow-1" id="app-content-inner">
-            {{ appContent|raw }}
-        </div>
+    </div>
+{% endif %}
+
+{# new grid starts here #}
+<div class="row no-gutters flex-grow-1">
+    <div class="col-sm">
+        {{ appContent|raw }}
     </div>
 </div>
