--- a/template/app/content.twig
+++ b/template/app/content.twig
@@ -6,7 +6,7 @@
 
 {# new grid starts here #}
 <div class="row no-gutters flex-grow-1">
-    <div class="col-sm">
+    <div class="col-sm" id="app-content-inner">
         {{ appContent|raw }}
     </div>
 </div>
