improve password manager functionality

--- a/template/app/html.twig
+++ b/template/app/html.twig
@@ -8,5 +8,6 @@
         id="data-node"
         data-api-host="{{ apiHost }}"
         data-host="{{ host }}"
+        data-asset-host="{{ assetHost }}"
 >
 </data-node>
