--- a/template/app/navbar.twig
+++ b/template/app/navbar.twig
@@ -10,15 +10,15 @@
                     data-toggle="dropdown"
                     aria-haspopup="true"
                     aria-expanded="false"
-                    data-target="#navbarDropdown"
+                    id="main-menu-dropdown-button"
             >
                 <img src="{{ userImage }}" class="avatar">
             </button>
-            <div id="navbarDropdown" class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                {% for route, data in partEntry.getEntries() %}
-                    <li><a class="dropdown-item d-flex flex-row" href="{{ baseURL }}/{{ route|lower }}">
+            <div id="main-menu-dropdown-area" class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                {% for data in settings %}
+                    <li><a class="dropdown-item d-flex flex-row" href="{{ data.compiled|lower }}">
                             <i class="{{ data.faClass }} fa-1x align-self-center justify-content-center text-center ml-1 icon"></i>
-                            <div class="name">&nbsp;{{ data.name }}</div>
+                            <div class="name">&nbsp;{{ data.name }} </div>
                         </a>
                     </li>
                 {% endfor %}
