Password Manager UI improvements

--- a/apps/Login/template/login.twig
+++ b/apps/Login/template/login.twig
@@ -49,6 +49,7 @@
                                        class="form-control form-control-lg input-control"
                                        placeholder="{{ passwordPlaceholder }}"
                                        aria-label="{{ passwordPlaceholder }}" aria-describedby="password-input"
+                                       autocomplete="off"
                                 >
                             </div>
                             <div class="form-group text-center">
