--- a/apps/PasswordManager/scss/password_manager.scss
+++ b/apps/PasswordManager/scss/password_manager.scss
@@ -10,24 +10,20 @@
   overflow-y: auto;
 }
 
-#pwm__node__container {
-  padding: 0;
-
-  #table__body {
-    .pwm__row {
-      border-top: 1px solid $keestash-theme-color-border-grey;
-    }
-
-    .pwm__row:hover {
-      background-color: $keestash-theme-color-inverted-darker;
-    }
-  }
-}
-
-.edge {
+.contextmenu {
   cursor: pointer;
 }
+.pwm__row {
+  border-top: 1px solid $keestash-theme-color-border-grey;
+}
 
+.pwm__row:hover {
+  background-color: $keestash-theme-color-border-grey;
+}
+
+.node-logo-color {
+  color: $keestash-theme-color-inverted-darker3;
+}
 .cropped {
   overflow: hidden;
   white-space: nowrap;
@@ -35,6 +31,7 @@
 }
 
 #pwm__node__detail {
+  height: 100vh;
   #pwm__detail__part {
     color: $keestash-text-color;
 
