--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -5,9 +5,13 @@ $body-color: #FFF;
 $keestash-theme-color: #269dff;
 $keestash-theme-color-inverted: #F2F2F2;
 $keestash-theme-color-inverted-darker: #cce9ff;
+$keestash-theme-color-inverted-darker1: #88CBFF;
+$keestash-theme-color-inverted-darker2: #57B6FF;
+$keestash-theme-color-inverted-darker3: #24A0FF;
 $keestash-theme-color-dark1: #0070cc;
 $keestash-theme-color-black: #3B3939;
 $keestash-theme-color-border-grey: #DEE2E6;
+$keestash-theme-color-border-grey-darker: #605E5C;
 $keestash-text-color: #000;
 $keestash-text-color-white: #FFF;
 $keestash-error-text-color-red: #DC143C;
