--- a/template/app/content.twig
+++ b/template/app/content.twig
@@ -6,10 +6,8 @@
             </div>
         {% endif %}
 
-        <div class="col no-gutters flex-grow-1">
-            <div class="col-sm">
+        <div class="no-gutters flex-grow-1">
                 {{ appContent|raw }}
-            </div>
         </div>
     </div>
 </div>
