--- a/template/app/actionbar.twig
+++ b/template/app/actionbar.twig
@@ -10,7 +10,8 @@
                     aria-haspopup="true"
                     aria-expanded="false"
                     data-target="action-bar-inner-dropdown"
-                    id="{{ actionBar.getId() }}"
+                    id="action__bar__button"
+                    data-target-id="{{ actionBar.getId() }}"
             >
                 {{ actionBar.getDescription() }}
             </button>
