--- a/apps/PasswordManager/scss/password_manager.scss
+++ b/apps/PasswordManager/scss/password_manager.scss
@@ -6,6 +6,12 @@
   height: 100vh;
 }
 
+.remove{
+  cursor: pointer;
+}
+.results{
+  min-height: 30vh;
+}
 .node_container {
   overflow-y: auto;
 }
@@ -13,17 +19,31 @@
 .contextmenu {
   cursor: pointer;
 }
+
 .pwm__row {
   border-top: 1px solid $keestash-theme-color-border-grey;
 }
 
 .pwm__row:hover {
-  background-color: $keestash-theme-color-border-grey;
+  background-color: $keestash-theme-color-border-grey-dark;
+}
+
+#contextMenu {
+  display: none;
+}
+
+.pwm__row:hover #contextMenu {
+  display: flex;
+
+  i {
+    cursor: pointer;
+  }
 }
 
 .node-logo-color {
   color: $keestash-theme-color-inverted-darker3;
 }
+
 .cropped {
   overflow: hidden;
   white-space: nowrap;
@@ -32,6 +52,7 @@
 
 #pwm__node__detail {
   height: 100vh;
+
   #pwm__detail__part {
     color: $keestash-text-color;
 
@@ -84,7 +105,6 @@
   }
 }
 
-
 a:visited, a:hover, a:active {
   color: $keestash-text-color !important;
 }
@@ -126,7 +146,7 @@ a:visited, a:hover, a:active {
   cursor: pointer;
 }
 
-#share-no-data-found {
+.share-no-data-found {
   margin-top: 10px;
 }
 
