--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -11,6 +11,7 @@ $keestash-theme-color-inverted-darker3: #24A0FF;
 $keestash-theme-color-dark1: #0070cc;
 $keestash-theme-color-black: #3B3939;
 $keestash-theme-color-border-grey: #DEE2E6;
+$keestash-theme-color-border-grey-dark: #F7F5F1;
 $keestash-theme-color-border-grey-darker: #605E5C;
 $keestash-text-color: #000;
 $keestash-text-color-white: #FFF;
