--- a/apps/Apps/template/apps.twig
+++ b/apps/Apps/template/apps.twig
@@ -1,29 +1,1 @@
-<table class="ui compact celled definition table">
-    <thead class="full-width">
-    <tr>
-        <th></th>
-        <th>{{ appId }}</th>
-        <th>{{ version }}</th>
-        <th>{{ createTs }}</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for key, value in apps %}
-        <tr>
-            <td class="collapsing">
-                <div class="ui fitted slider checkbox">
-                    <input type="checkbox" class="apps__app__checkbox" data-app-id="{{ value.getId() }}"
-                            {% if value.isEnabled() %}
-                                checked
-                            {% endif %}
-                    >
-                    <label></label>
-                </div>
-            </td>
-            <td>{{ value.getId() }}</td>
-            <td>{{ value.getVersion() }}</td>
-            <td>{{ value.getCreateTs().format('d.m.Y H:i:s') }}</td>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
+<div id="apps"></div>
