encrypt by organization

--- a/template/app/head.twig
+++ b/template/app/head.twig
@@ -26,7 +26,7 @@
     ██║  ██╗███████╗███████╗███████║   ██║   ██║  ██║███████║██║  ██║
     ╚═╝  ╚═╝╚══════╝╚══════╝╚══════╝   ╚═╝   ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝
 
-    Open source password safe
+    Open Source Password Manager
     Copyright (c) Keestash (https://www.keestash.com)
 
     This program is free software: you can redistribute it and/or modify
