--- a/apps/PasswordManager/scss/password_manager.scss
+++ b/apps/PasswordManager/scss/password_manager.scss
@@ -31,11 +31,12 @@
 }
 
 #contextMenu {
-  display: none;
+  visibility: hidden;
+  display: flex;
 }
 
 .pwm__row:hover #contextMenu {
-  display: flex;
+  visibility: visible;
 
   i {
     cursor: pointer;
