--- a/apps/PasswordManager/scss/password_manager.scss
+++ b/apps/PasswordManager/scss/password_manager.scss
@@ -6,6 +6,11 @@
   height: 100vh;
 }
 
+.blue{
+  border-color: $keestash-theme-color-dark1;
+  color: $keestash-theme-color;
+}
+
 .remove {
   cursor: pointer;
 }
