--- a/apps/PasswordManager/scss/password_manager.scss
+++ b/apps/PasswordManager/scss/password_manager.scss
@@ -6,7 +6,7 @@
   height: 100vh;
 }
 
-.blue{
+.blue {
   border-color: $keestash-theme-color-dark1;
   color: $keestash-theme-color;
 }
@@ -15,7 +15,7 @@
   cursor: pointer;
 }
 
-.clickable{
+.clickable {
   cursor: pointer;
 }
 
@@ -197,4 +197,23 @@ a:visited, a:hover, a:active {
   background: white !important;
   border: $keestash-theme-color solid 1px !important;
   color: $keestash-theme-color !important;
+}
+
+.new-pw-weak {
+  margin-bottom: 0;
+  color: $keestash-error-text-color-yellow;
+}
+
+.new-pw-neutral {
+  margin-bottom: 0;
+}
+
+.new-pw-bad {
+  margin-bottom: 0;
+  color: $keestash-error-text-color-red;
+}
+
+.new-pw-good {
+  margin-bottom: 0;
+  color: $keestash-error-text-color-green;
 }
