--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -16,6 +16,8 @@ $keestash-theme-color-border-grey-darker: #605E5C;
 $keestash-text-color: #000;
 $keestash-text-color-white: #FFF;
 $keestash-error-text-color-red: #DC143C;
+$keestash-error-text-color-green: #5CB85C;
+$keestash-error-text-color-yellow: #FFE24F;
 $keestash-color-yellow: #FFE24F;
 
 $keestash-avatar-size: 30px;
