--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -9,6 +9,7 @@ $keestash-theme-color-inverted-darker1: #88CBFF;
 $keestash-theme-color-inverted-darker2: #57B6FF;
 $keestash-theme-color-inverted-darker3: #24A0FF;
 $keestash-theme-color-dark1: #0070cc;
+$keestash-theme-color-dark2: #1662A1;
 $keestash-theme-color-black: #3B3939;
 $keestash-theme-color-border-grey: #DEE2E6;
 $keestash-theme-color-border-grey-dark: #F7F5F1;
@@ -254,3 +255,5 @@ a:visited, a:hover, a:active {
     }
   }
 }
+
+
