* update vue to v3

--- a/apps/About/template/about.twig
+++ b/apps/About/template/about.twig
@@ -81,7 +81,7 @@
     <div class="d-flex flex-column justify-content-center container pt-5 pb-5">
         <a class="d-flex" href="{{ whitepaper.productAndServices.english.link }}">
             <i class="fas fa-file-alt fa-3x error"></i>
-            <div class="ml-3 d-flex flex-column">
+            <div class="ms-3 d-flex flex-column">
                 <div class="black">{{ whitepaper.productAndServices.english.name }}</div>
                 <div class="grey-dark small">{{ whitepaper.productAndServices.english.language }}</div>
                 <div class="grey-dark small">{{ whitepaper.productAndServices.english.version }}</div>
@@ -89,7 +89,7 @@
         </a>
         <a class="d-flex" href="{{ whitepaper.productAndServices.german.link }}">
             <i class="fas fa-file-alt fa-3x error"></i>
-            <div class="ml-3 d-flex flex-column">
+            <div class="ms-3 d-flex flex-column">
                 <div class="black">{{ whitepaper.productAndServices.german.name }}</div>
                 <div class="grey-dark small">{{ whitepaper.productAndServices.german.language }}</div>
                 <div class="grey-dark small">{{ whitepaper.productAndServices.german.version }}</div>
