--- a/apps/PasswordManager/scss/password_manager.scss
+++ b/apps/PasswordManager/scss/password_manager.scss
@@ -1,7 +1,6 @@
 @import "style";
 @import "vue-select/src/scss/vue-select.scss";
-@import "vue-loading-skeleton/dist/vue-loading-skeleton.css";
-
+//@import "vue-loading-skeleton/dist/style.css";
 #no-passwords {
   color: $grey;
   height: 100vh;
