--- a/template/app/content.twig
+++ b/template/app/content.twig
@@ -6,7 +6,7 @@
             </div>
         {% endif %}
 
-        <div class="no-gutters flex-grow-1">
+        <div class="g-0 flex-grow-1">
                 {{ appContent|raw }}
         </div>
     </div>
