--- a/template/app/navbar.twig
+++ b/template/app/navbar.twig
@@ -7,7 +7,7 @@
         <div class="btn-group">
             <button type="button"
                     class="btn dropdown-toggle"
-                    data-toggle="dropdown"
+                    data-bs-toggle="dropdown"
                     aria-haspopup="true"
                     aria-expanded="false"
                     id="main-menu-dropdown-button"
