--- a/template/app/actionbar.twig
+++ b/template/app/actionbar.twig
@@ -6,7 +6,7 @@
             <button
                     type="button"
                     class="btn dropdown-toggle btn-primary"
-                    data-toggle="dropdown"
+                    data-bs-toggle="dropdown"
                     aria-haspopup="true"
                     aria-expanded="false"
                     data-target="action-bar-inner-dropdown"
