* update vue to v3 * update bootstrap to v5 * adjust code for vue3 and b5

--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -41,6 +41,10 @@ html {
   }
 }
 
+.col-sm-one-and-a-half {
+  flex: 0 0 auto;
+  width: 12.55555555%;
+}
 
 .navbar {
   background-color: $keestash-theme-color;
