--- a/template/app/navbar.twig
+++ b/template/app/navbar.twig
@@ -1,34 +1,52 @@
 <nav class="navbar sticky-top col">
-    <a class="navbar-brand" href="{{ mainHref }}">
-        <img src="{{ logopath }}" height="30" alt="{{ vendorName }}">
-    </a>
-
-    {% if contextless == false %}
-        <div class="btn-group">
-            <button type="button"
-                    class="btn dropdown-toggle"
-                    data-bs-toggle="dropdown"
-                    aria-haspopup="true"
-                    aria-expanded="false"
-                    id="main-menu-dropdown-button"
-            >
-                <img src="{{ userImage }}" class="avatar">
-            </button>
-            <div id="main-menu-dropdown-area" class="dropdown-menu dropdown-menu-right"
-                 aria-labelledby="navbarDropdown">
-                {% for data in settings %}
-                    <li><a class="dropdown-item d-flex flex-row justify-content-start pl-2"
-                           href="{{ data.compiled|lower }}">
-                            <div class="align-self-center">
-                                <i class="{{ data.faClass }} fa-1x align-self-center justify-content-center text-center ml-1 icon"></i>
-                            </div>
-                            <div class="align-self-start pl-2">
-                                <div class="name">&nbsp;{{ data.name }} </div>
-                            </div>
-                        </a>
-                    </li>
-                {% endfor %}
+    <div class="container-fluid">
+        <div class="row justify-content-between flex-grow-1">
+            <div class="col-1">
+                <a class="navbar-brand" href="{{ mainHref }}">
+                    <img src="{{ logopath }}" height="30" alt="{{ vendorName }}">
+                </a>
             </div>
+            {% if contextless == false %}
+                <div class="d-flex col-4 flex-grow-1 align-items-center">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text border-0 bg-white">
+                                <i class="fas fa-search"></i>
+                            </div>
+                        </div>
+                        <input type="text" class="form-control border-0" placeholder="{{ searchInputPlaceholder }}">
+                    </div>
+                </div>
+
+                <div class="col-1 d-flex justify-content-end p-0">
+                    <div class="btn-group">
+                        <button type="button"
+                                class="btn dropdown-toggle"
+                                data-bs-toggle="dropdown"
+                                aria-haspopup="true"
+                                aria-expanded="false"
+                                id="main-menu-dropdown-button"
+                        >
+                            <img src="{{ userImage }}" class="avatar">
+                        </button>
+                        <div id="main-menu-dropdown-area" class="dropdown-menu dropdown-menu-right"
+                             aria-labelledby="navbarDropdown">
+                            {% for data in settings %}
+                                <li><a class="dropdown-item d-flex flex-row justify-content-start pl-2"
+                                       href="{{ data.compiled|lower }}">
+                                        <div class="align-self-center">
+                                            <i class="{{ data.faClass }} fa-1x align-self-center justify-content-center text-center ml-1 icon"></i>
+                                        </div>
+                                        <div class="align-self-start pl-2">
+                                            <div class="name">&nbsp;{{ data.name }} </div>
+                                        </div>
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
         </div>
-    {% endif %}
+    </div>
 </nav>
