--- a/apps/PasswordManager/scss/password_manager.scss
+++ b/apps/PasswordManager/scss/password_manager.scss
@@ -1,6 +1,8 @@
 @import "style";
 @import "vue-select/src/scss/vue-select.scss";
-//@import "vue-loading-skeleton/dist/style.css";
+@import "@imengyu/vue3-context-menu/lib/vue3-context-menu";
+@import "../../node_modules/vue-loading-skeleton/dist/style.css";
+
 #no-passwords {
   color: $grey;
   height: 100vh;
@@ -31,7 +33,7 @@
   cursor: pointer;
 }
 
-.pwm__row {
+.pwm__row__border {
   border-top: 1px solid $keestash-theme-color-border-grey;
 }
 
